@@ -7,6 +7,7 @@ c:::755:/:pgrphack:
 c:::755:/:readproctitle:
 c:::755:/:setlock:
 c:::755:/:setuidgid:
+c:::755:/:setuser:
 c:::755:/:softlimit:
 c:::755:/:supervise:
 c:::755:/:svc:
