@@ -8,6 +8,7 @@ c:::644:/man8/:pgrphack.8:
 c:::644:/man8/:readproctitle.8:
 c:::644:/man8/:setlock.8:
 c:::644:/man8/:setuidgid.8:
+c:::644:/man8/:setuser.8:
 c:::644:/man8/:softlimit.8:
 c:::644:/man8/:supervise.8:
 c:::644:/man8/:svc.8:
