@@ -65,6 +65,7 @@ pgrphack(8),
 readproctitle(8),
 setlock(8)
 setuidgid(8),
+setuser(8),
 softlimit(8),
 supervise(8),
 svc(8),
