@@ -72,6 +72,7 @@ multilog(8),
 pgrphack(8),
 readproctitle(8),
 setuidgid(8),
+setuser(8),
 softlimit(8),
 supervise(8),
 svc(8),
