@@ -1,11 +1,8 @@
-.TH setuidgid 8
+.TH setuser 8
 .SH NAME
-setuidgid \- runs another program under a specified account's uid and gid.
+setuser \- runs another program under a specified account's environment.
 .SH SYNOPSIS
-.B setuidgid
-[
-.B \-s
-]
+.B setuser
 .I account
 .I child
 .SH DESCRIPTION
@@ -14,26 +11,35 @@ is a single argument.
 .I child
 consists of one or more arguments. 
 
-.B setuidgid
-sets its uid and gid to
+.B setuser
+sets
+.BR $GID ,
+.BR $UID ,
+.BR $SHELL ,
+.BR $HOME ,
+and
+.BR $USER
+to
 .IR account 's
-uid and gid, removing all supplementary groups. It then runs
+gid number, uid number, login shell, home directory, and user name, respectively.
+It changes the working directory to
+.IR account 's
+home, and sets its uid and gid to
+.IR account 's
+uid and gid, with supplementary groups set up.
+It then runs
 .IR child .
 
-.B setuidgid
+.B setuser
 cannot be run by anyone other than root.
 .SH EXIT CODES
-.B setuidgid
+.B setuser
 exits 111 if it cannot find a UNIX account named
 .IB account ,
-if it cannot setgid, if it cannot setuid, or if it cannot run
+if it cannot setup the environment, change directory, setgid, setuid, or run
 .IR child .
 Otherwise its exit code is the same as that of
 .IR child .
-.SH OPTIONS
-.TP
-.B \-s
-Set account's supplementary gids.
 .SH SEE ALSO
 envdir(8),
 envini(8),
@@ -43,7 +49,7 @@ multilog(8),
 pgrphack(8),
 readproctitle(8),
 setlock(8),
-setuser(8),
+setuidgid(8),
 softlimit(8),
 supervise(8),
 svc(8),
