@@ -152,6 +152,7 @@ pgrphack(8),
 readproctitle(8),
 setlock(8),
 setuidgid(8),
+setuser(8),
 supervise(8),
 svc(8),
 svok(8),
