@@ -1,3 +1,5 @@
+Added new program setuser to setuid, setenv, plus chdir before exec.
+
 Added new program envini to read environment variables from an INI file.
 
 Added support for adding a prefix in envdir.
